--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,10 +22,10 @@
 	  <div class="container" id="container"></div>
 	  <script src="https://mylightningdomaintrainee-dev-ed.lightning.force.com/lightning/lightning.out.js"></script>
 	  <script>
-    $Lightning.use("c:locatorApp",    // name of the Lightning app
+    $Lightning.use("c:schemaTestApp",    // name of the Lightning app
         function() {                  // Callback once framework and app loaded
             $Lightning.createComponent(
-                "c:storeLocatorMain", // top-level component of your app
+                "c:schamaObjects", // top-level component of your app
                 { },                  // attributes to set on the component when created
                 "container",   // the DOM location to insert the component
                 function(cmp) {
