--- a/templates/home.html
+++ b/templates/home.html
@@ -57,6 +57,25 @@
 	  <input type="submit" value="ConnectToSalesforce" class="button"  />
 	  
 	 </form>
+	    
+	    <div class="container" id="container"></div>
+	  <script src="https://mylightningdomaintrainee-dev-ed.lightning.force.com/lightning/lightning.out.js"></script>
+	  <script>
+    $Lightning.use("c:schemaTestApp",    // name of the Lightning app
+        function() {                  // Callback once framework and app loaded
+            $Lightning.createComponent(
+                "c:schamaObjects", // top-level component of your app
+                { },                  // attributes to set on the component when created
+                "container",   // the DOM location to insert the component
+                function(cmp) {
+                    // callback when component is created and active on the page
+                }
+            );
+        },
+        'https://mylightningdomaintrainee-dev-ed.my.salesforce.com',{{authToken}}  // Community endpoint
+    );
+</script>
+
 	
   </body>
 </html>
