--- a/templates/home.html
+++ b/templates/home.html
@@ -62,7 +62,7 @@
 	  <script src="https://mylightningdomaintrainee-dev-ed.lightning.force.com/lightning/lightning.out.js"></script>
 	  <script>
 		  var authToken={{authToken}};
-		  alert(authToken)k
+		  alert(authToken);
     $Lightning.use("c:schemaTestApp",    // name of the Lightning app
         function() {                  // Callback once framework and app loaded
             $Lightning.createComponent(
