--- a/templates/home.html
+++ b/templates/home.html
@@ -74,7 +74,7 @@
                 }
             );
         },
-        'https://mylightningdomaintrainee-dev-ed.my.salesforce.com',authToken // Community endpoint
+        'https://mylightningdomaintrainee-dev-ed.my.salesforce.com','00D6F000002KU1w!ARgAQDcC403TcvFbFVdyyF17kDVT5w34rRa6V9a9clz2sZjxO_tgCyT7kXJ_opvutArmsphTg8gEj6JsxTOdgLCNqJc4Elup' // Community endpoint
     );
 </script>
 
