--- a/templates/home.html
+++ b/templates/home.html
@@ -61,8 +61,8 @@
 	    <div id="container"></div>
 	  <script src="https://mylightningdomaintrainee-dev-ed.lightning.force.com/lightning/lightning.out.js"></script>
 	  <script>
-		  var authToken={{authToken}};
-		  alert(authToken);
+		  //var authToken={{authToken}};
+		  //alert(authToken);
     $Lightning.use("c:schemaTestApp",    // name of the Lightning app
         function() {                  // Callback once framework and app loaded
             $Lightning.createComponent(
