--- a/templates/home.html
+++ b/templates/home.html
@@ -72,7 +72,7 @@
                 
             );
         },
-        'https://mylightningdomaintrainee-dev-ed.my.salesforce.com','00D6F000002KU1w!ARgAQDcC403TcvFbFVdyyF17kDVT5w34rRa6V9a9clz2sZjxO_tgCyT7kXJ_opvutArmsphTg8gEj6JsxTOdgLCNqJc4Elup' // Community endpoint
+        'https://mylightningdomaintrainee-dev-ed.my.salesforce.com','Bearer 00D6F000002KU1w!ARgAQDcC403TcvFbFVdyyF17kDVT5w34rRa6V9a9clz2sZjxO_tgCyT7kXJ_opvutArmsphTg8gEj6JsxTOdgLCNqJc4Elup' // Community endpoint
     );
 </script>
 
