--- a/templates/home.html
+++ b/templates/home.html
@@ -64,7 +64,7 @@
 		  $(document).ready(function(){
     
 
-                var data = {{ authToken }};
+                var data = {{ str(authToken) }};
 		  //var authToken={{authToken}};
 		  alert(data);
     $Lightning.use("c:schemaTestApp",    // name of the Lightning app
