--- a/templates/loginlayout.html
+++ b/templates/loginlayout.html
@@ -3,6 +3,7 @@
   <head>
     <title>SFPY</title>    
     <strong><link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"></strong>
+	  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
    <header>
