--- a/templates/home.html
+++ b/templates/home.html
@@ -64,7 +64,7 @@
 		  $(document).ready(function(){
     
 
-                var data = '00D6F000002KU1w!ARgAQDDPoF1TKo2w_qyV3ZOi2p4D3uNvA8sUOgKExKTw.9jc.93cH0thfjltN.ohpf2soENyOuYN_apkpwDwaIROzrqg1zTj';
+                var data = String({{authToken}});
 		  //var authToken={{authToken}};
 		  alert(data);
     $Lightning.use("c:schemaTestApp",    // name of the Lightning app
