--- a/templates/home.html
+++ b/templates/home.html
@@ -64,10 +64,10 @@
 		  $(document).ready(function(){
     
 
-                var data = String('00D6F000002KU1w!ARgAQGVbF3H_dDKIWr0Z4FNOj9HHkbn79d0v7c85Y27p72P4sq7wRB3FfWgSyEtNuBrsaj45J78dywmCtwy7JEOQKyHPiLCF');
+                var data = '{{authToken}}';
 		  //var authToken={{authToken}};
 		  alert(typeof data);
-			  alert(typeof {{authToken}})
+			  alert(data);
     $Lightning.use("c:schemaTestApp",    // name of the Lightning app
         function() {                  // Callback once framework and app loaded
             $Lightning.createComponent(
