--- a/templates/home.html
+++ b/templates/home.html
@@ -77,7 +77,7 @@
                 
             );
         },
-        'https://mylightningdomaintrainee-dev-ed.my.salesforce.com/services/proxy',data // Community endpoint
+        'https://mylightningdomaintrainee-dev-ed.lightning.force.com',data // Community endpoint
     );
 		  });
 </script>
