--- a/templates/home.html
+++ b/templates/home.html
@@ -71,7 +71,7 @@
     $Lightning.use("c:schemaTestApp",    // name of the Lightning app
         function() {                  // Callback once framework and app loaded
             $Lightning.createComponent(
-                "c:schamaObjects", // top-level component of your app
+                "c:helloWorld", // top-level component of your app
                 { },                  // attributes to set on the component when created
                 "container",   // the DOM location to insert the component
                 
